--- a/ui/html_one.html
+++ b/ui/html_one.html
@@ -1,5 +1,32 @@
 <html>
-
+<head>
+    <title>
+        Article one
+    </title>
+</head>
+<body>
+    <div>
+        <a href="/">Home </a> 
+    </div>
+    <hr>
+    <h3>
+        Article one
+    </h3>
+    <div>
+        9 Feb
+    </div>
+    <div>
+    <p>
+        thjis is the article one  thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one
+    </p>
+    <p>
+         thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one
+    </p>
+    <p>
+         thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one thjis is the article one
+    </p>
+    </div>
+</body>
 
 
 </html>
