--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! This is Abhishek Gangwar.
         </div>
+        <script>
+            alert('Hi,I'm abhishek Gangwar')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
