[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! This is Abhishek Gangwar.
         </div>
         <script>
-            alert('Hi,I'm abhishek Gangwar')
+            alert('Hi,I'm abhishek Gangwar');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
